Attempt 2 at fixing send button on mobile

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1505,13 +1505,14 @@
             right: 0;
 
             &.hidden {
-                display: none;
+                visibility: hidden;
             }
         }
 
         .wc-send {
             svg {
                 width: 55px;
+                height: 55px;
             }
         }
 
